# XCoin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  XCoin.sln  block.cpp  blockchain.cpp  blockchain.h  blockchain0.pro  main.cpp  vcpkg.json
.github/workflows/: cmake.yml
DraftAlex/: btncontainer.cpp  btncontainer.h  mainwindow.cpp  mainwindow.h  menubtn.cpp  menubtn.h  test_qt2.pro
DraftArthur/: TestToutapp.pro  balancebutton.cpp  balancebutton.h  contactbutton.cpp  contactbutton.h  graphbutton.cpp  graphbutton.h  homebutton.cpp  homebutton.h  livebutton.cpp  livebutton.h  main.cpp  mainwindow.cpp  mainwindow.h  paybutton.cpp  paybutton.h
DraftPicha/: customwidget.h  mainwindow.cpp  mainwindow.h
DraftTim/: HomeSetUp_Tim.pro  custombutton.cpp  custombutton.h  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h
DraftTim/database/: user_info.db
Minimal working/: block.h
Proof of Stake/: Block.h  Blockchain.cpp  Blockchain.h  Proof of Stake.cpp  Proof of Stake.vcxproj  Proof of Stake.vcxproj.filters  sha256.h
Proof of Stake v_0/: bignumber.cpp  bignumber.h  block.cpp  block.h  blockchain.cpp  blockchain.h
TricountAlgo/: Tricount.cpp  Tricount.h
XBlockchain/: Blockchain.cpp  Blockchain.h  XBlockchain.vcxproj  XBlockchain.vcxproj.filters  block.cpp  block.h  sha256.cpp  transaction.cpp  transaction.h
XBlockchain/XCrypt/: xcrypt.h
XBlockchain/tests/: xblockchain-tests.cpp
XBlockchain_Tests/: XBlockchain_Tests.vcxproj  test.cpp
XCoin_Tests/: XCoin_Tests.cpp  XCoin_Tests.vcxproj  XCoin_Tests.vcxproj.filters
XNode/: RSA_gen.cpp  RSA_gen.h  XNode.cpp  interface.cpp  interface.h  main.cpp
XTest/: XTest.vcxproj  XTest.vcxproj.filters  xtest.h
build-frontend_workspace-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-frontend_workspace-Desktop_Qt_5_12_5_clang_64bit-Debug/: Makefile  moc_balancedialog.cpp  moc_balancewindow.cpp  moc_contactswindow.cpp  moc_graphwindow.cpp  moc_livewindow.cpp  moc_mainwindow.cpp  moc_paywindow.cpp  ui_balancedialog.h  ui_balancewindow.h  ui_contactswindow.h  ui_graphwindow.h  ui_livewindow.h  ui_mainwindow.h  ui_paywindow.h
build-frontend_workspace-Qt_6_2_0_for_macOS-Debug/: Makefile  moc_balancewindow.cpp  moc_contactswindow.cpp  moc_graphwindow.cpp  moc_livewindow.cpp  moc_mainwindow.cpp  moc_paywindow.cpp  ui_balancewindow.h  ui_contactswindow.h  ui_graphwindow.h  ui_livewindow.h  ui_mainwindow.h  ui_paywindow.h
build-test_qt2-Qt_6_2_0_for_macOS-Debug/: Makefile  moc_btncontainer.cpp  moc_mainwindow.cpp  moc_menuwidget.cpp
build-ui-Desktop_Qt_5_12_11_clang_64bit-Debug/: .qmake.stash  Makefile  moc_balancewidget.cpp  moc_homewidget.cpp  moc_logindialog.cpp  moc_mainwindow.cpp  moc_payments.cpp  moc_settingswidget.cpp  ui_mainwindow.h
build-ui-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.ui.Debug  object_script.ui.Release  ui_mainwindow.h  ui_paymentdialog.h  ui_payments.h  ui_purchase_xcoin.h
build-ui-Desktop_Qt_5_12_5_clang_64bit-Debug/: .qmake.stash  Makefile  moc_addcontactdialog.cpp  moc_balancewidget2.cpp  moc_contactswidget.cpp  moc_homewidget.cpp  moc_mainwindow.cpp  moc_paymentdialog.cpp  moc_payments.cpp  moc_paywidget.cpp  moc_settingswidget.cpp  moc_settingwidget.cpp  moc_togglebtn.cpp  ui_logindialog.h  ui_settingswidget.h
build-ui-Desktop_Qt_5_12_5_clang_64bit-Profile/: Makefile  moc_balancewidget.cpp  moc_contactswidget.cpp  moc_logindialog.cpp  moc_predefs.h  moc_purchase_xcoin.cpp
build-ui-Qt_6_2_0_for_macOS-Debug/: Makefile  moc_contactswidget.cpp  moc_homewidget.cpp  moc_logindialog.cpp  moc_mainwindow.cpp  moc_payments.cpp  moc_settingswidget.cpp  qrc_test.cpp  ui_logindialog.h  ui_mainwindow.h
build-ui-Qt_6_2_2_for_macOS-Debug/: Makefile  moc_contactswidget.cpp  ui_mainwindow.h
build-ui.pro-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_balancewidget.h
doc/: project_design.md
frontend_workspace/: balancedialog.cpp  balancedialog.h  balancedialog.ui  balancewindow.cpp  balancewindow.h  balancewindow.ui  contactswindow.cpp  contactswindow.h  contactswindow.ui  frontend_workspace.pro  graphwindow.cpp  graphwindow.h  graphwindow.ui  livewindow.cpp  livewindow.h  livewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  paywindow.cpp  paywindow.h  paywindow.ui
frontend_workspace/Test Qt Library/: TutoToutApprendre.pro  custombutton.cpp  custombutton.h  customwidget.cpp
frontend_workspace/test_qt2/: menuwidget.cpp  menuwidget.h
new_test/: bignumber.h  block.cpp  block.h  blockchain.cpp  blockchain.h  main.cpp  sha256.cpp  sha256.h  test1.cpp
project_testing2/: CMakeLists.txt  main.cpp
reports/: Week 6 6th to 12th of December.md  Week 6.md  Week 7 13th to 19th of December 73503735a8a94ba0bccc768bee016740.md  week1.md  week2.md  week3  week3.md  week4.md  week5.md  week6.md  week7.md
src/XBlockchain/: Blockchain.cpp  Blockchain.h  bignumber.cpp  bignumber.h  block.cpp  block.h  pow.cpp  pow.h  sha256.cpp  sha256.h  transaction.cpp  transaction.h  transactionPool.cpp  transactionPool.h  wallet.cpp  wallet.h
src/XNode/: MD5.cpp  XNode.cpp  XNode.h  XNodeSDK.cpp  XNodeSDK.h  XNodeSync.cpp  XNodeSync.h  archive.cpp  archive.h  blockchain.grpc.pb.cc  blockchain.grpc.pb.h  blockchain.pb.cc  blockchain.pb.h  blockchain.proto  interface.cpp  interface.h  keys.cpp  keys.h  (+5 more)
ui/: addcontactdialog.cpp  addcontactdialog.h  balance.cpp  balance.h  balance.ui  balancewidget.cpp  balancewidget.h  balancewidget.ui  balancewidget2.cpp  balancewidget2.h  contactswidget.cpp  contactswidget.h  custombutton.cpp  custombutton.h  homewidget.cpp  homewidget.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  paycontactdialog.cpp  paycontactdialog.h  paymentdialog.cpp  paymentdialog.h  paymentdialog.ui  payments.cpp  payments.h  payments.ui  paywidget.cpp  paywidget.h  purchase_xcoin.cpp  purchase_xcoin.h  purchase_xcoin.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  style.qss  styleLight.qss  (+6 more)
(+24 files in other folders)
